TypeScript and Functional React Components

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ Thumbs.db
 # Editor folders/files
 **/.vscode
 .idea
+
+# Vim temporary
+*-E
+
+# Rails apps for integration testing are not needed in the repo
+rails/*_app
