--- a/package.json
+++ b/package.json
@@ -1,53 +1,57 @@
 {
     "name": "pi-sdk-react",
     "version": "2.0.0",
-    "description": "A React component class that include Pi SDK functionality",
+    "description": "A React component and hooks library for Pi SDK integration",
     "keywords": [
         "pi",
         "pinetwork",
-        "react"
+        "react",
+        "sdk"
     ],
     "repository": {
         "type": "git",
-        "url": "\"https://github.com/pi-apps/pi-sdk-react"
+        "url": "https://github.com/pi-apps/pi-sdk-react"
     },
     "license": "SEE LICENCE IN LICENSE",
-    "author": "John Kolen",
-    "type": "commonjs",
-    "main": "index.js",
+    "type": "module",
+    "types": "./dist/index.d.ts",
     "scripts": {
-        "pretest": "rm -f ./PiButton.tsx && npx plop pi-sdk:install",
-        "test": "node ./scripts/test-and-cleanup.ts",
-        "posttest": "rm -f ./PiButton.tsx",
-        "clean:generated": "rm -f ./PiButton.tsx"
+        "build": "vite build",
+        "test": "vitest",
+        "pretest": "yarn plop pi-sdk:install --dest src/tmp/PiButton.tsx",
+        "plop": "plop"
+    },
+    "bin": {
+        "pi-sdk-react-install": "./cli.js"
+    },
+    "peerDependencies": {
+        "react": "^18.0.0 || ^19.0.0",
+        "react-dom": "^18.0.0 || ^19.0.0"
     },
     "dependencies": {
-        "pi-sdk-js": "github:pi-apps/pi-sdk-js",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "pi-sdk-js": "github:/pi-apps/pi-sdk-js",
         "plop": "^4.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.28.5",
-        "@babel/preset-env": "^7.28.5",
-        "@testing-library/dom": "^10.4.1",
         "@testing-library/jest-dom": "^6.9.1",
-        "@testing-library/react": "^16.3.0",
-        "@types/jest": "^30.0.0",
+        "@testing-library/react": "^14.0.0",
         "@types/react": "^19.2.7",
         "@types/react-dom": "^19.2.3",
-        "babel-jest": "^30.2.0",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^30.2.0",
-        "ts-jest": "^29.4.6",
+        "jsdom": "^27.3.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "typescript": "^5.9.3",
-        "plop": "^4.0.0"
+        "vite": "^7.3.0",
+        "vite-plugin-dts": "^4.5.4",
+        "vite-tsconfig-paths": "^6.0.3",
+        "vitest": "^1.4.0"
     },
-    "jest": {
-        "preset": "ts-jest",
-        "testEnvironment": "jsdom",
-        "moduleNameMapper": {
-            "^pi-sdk-react/PiSdkComponent": "./PiSdkComponent.tsx"
-        }
+    "main": "./dist/index.js",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js"
+        },
+        "./cli.js": "./cli.js",
+        "./plopfile.js": "./plopfile.js"
     }
 }
