--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
         "react-dom": "^18.0.0 || ^19.0.0"
     },
     "dependencies": {
+        "pi-sdk-js": "file:../js-base",
+        "plop": "^4.0.0"
+    },
+    "external_dependencies": {
         "pi-sdk-js": "github:/pi-apps/pi-sdk-js",
         "plop": "^4.0.0"
     },
